istio/enforce-ambient-mode-namespace/.chainsaw-test/ns-bad-disabled.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: other
  name: bad-istio-amb01
